--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-# Byte-compiled / optimized / DLL files
+# Python-generated files
 __pycache__/
-*.py[cod]
-*$py.class
+*.py[oc]
+build/
+dist/
+wheels/
+*.egg-info
 
-# Environments
-.env
+# Virtual environments
 .venv
