--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,5 +3,6 @@
         "ms-python.python",
         "ms-python.black-formatter",
         "ms-python.vscode-pylance",
+        "ms-python.isort",
     ]
 }
